# umrt-arm-firmware-lib

./: .gitignore  .gitmodules  CMakeLists.txt  CommunicationMaster.py  CommunicationTest.h  Doxyfile  README.md  SYSEX_COMMANDS.h  StepperController.cpp  StepperController.h  config.in.cmake  cpack.cmake  mainpage.dox  openFrameworksArduino.tag.xml
.github/workflows/: build.yaml  doxygen-gh-pages.yml  semver.yaml
include/arm-firmware-lib/: Utils.h
include/openFrameworksArduino/: CMakeLists.txt
include/umrt-arm-firmware-lib/: ArduinoCommunicationTest.h  CommunicationTest.h  MKS_COMMANDS.hpp  SYSEX_COMMANDS.hpp  StepperController.h  Utils.h  arduino_communication_test.hpp  arduino_stepper_controller.hpp  mks_enums.hpp  mks_stepper_controller.hpp  mks_test.hpp  servo_controller.hpp  utils.hpp  wheel_controller.hpp
src/: CommunicationMaster.py  CommunicationTestScript.cpp  MksTest.py  StepperController.cpp  arduino_communication_test.cpp  arduino_communication_test_script.cpp  arduino_stepper_controller.cpp  mks_stepper_controller.cpp  mks_test.cpp  mks_test_script.cpp  servo_controller.cpp  servo_test_script.cpp  stepper_controller.cpp  wheel_controller.cpp
